# SFBot

./: .gitignore  README.md  pyproject.toml
docker/: dockerfile.server
docker/native/docker/: Dockerfile  README.md
docker/native/kubernetes/: README.md  deployment.yaml
docker/tdx/: depoyment.sh  mount_guest_rootfs.sh  update_guest_rootfs.sh
sfbot/: constants.py  conversation.py  utils.py
sfbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sfbot/llm/ggml/: convert.py  convert_model.py  quantize.py
sfbot/llm/transformers/: __init__.py  bmm.py  convert.py  embedding.py  kv.py  load_config.yaml  loader.py  lookup.py  low_bit_linear.py  model.py  modelling_bigdl.py  speculative.py  training_patch.py  utils.py
sfbot/llm/utils/: ipex_importer.py
sfbot/serve/: base_model_worker.py  controller.py  gradio_web_server.py  low_bit_worker.py  openai_api_server.py  tgi_api_server.py
sfbot/serve/protocol/: tgi_api_protocol.py
test/: ceval.py  generate.py  llama_architecture.py  model_load_time.py  model_size.py  numa.py  weights_gpt2.py  weights_llama.py  yield.py
test/benchmark/: benchmark_util.py  response.py  stream_response.py
test/benchmark/all-in-one/: README.md  config.yaml  optimize_model-results-2024-05-13.csv  run-stress-test.py  run.py  run.sh  save.py
test/ceval/: README.md  eval.py  organize_results.py  run.sh
test/ceval/evaluators/: chatglm.py  evaluator.py  llama.py  (+1 more)
test/concurrent/: benchmark.py  con_k8_tests.py  concurrnet.py
test/perplexity/: README.md  make_csv.py  make_table.py  ppl.py  run.py  run_wikitext.py  test.sh
(+43 files in other folders)
